<resources>
    <string name="app_name">DestrictPassengerApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_fragment">главная</string>
    <string name="newRoute_fragment">новый маршрут</string>
    <string name="find_route_fragment">Поиск маршрутов</string>
    <string name="help_fragment">Помощь</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="action_sharing">action sharing</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="isDoneStr">Done</string>
    <string name="saveButtonStr">Save</string>
    <string name="cancelButtonStr">Cancel</string>
    <string name="addNewRouteStr">New mRoute</string>
    <string name="timePickerStr">When</string>
    <string name="route_item_from">From:</string>
    <string name="route_item_to">to:</string>
    <string name="imageDriverOrPedestrian">driver or pede img</string>
    <string name="settings">Settings</string>
    <string name="noDataInList">No data</string>
    <string name="switchLabel">switch</string>
    <string name="enterDate">Enter date</string>
    <string name="enterTime">Enter time</string>
    <string name="editDateTimeDialogTitle">Edit date and time</string>
    <string name="switchLabelPedestrian">Pedestrian</string>
    <string name="switchLabelCarDriver">Car driver</string>
    <string name="minuteLeter">min</string>
    <string name="inputPhoneHint">enter phone number</string>
    <string name="confirmPhoneBtnLabel">confirm</string>
    <string name="country_code">RU</string>
    <string name="minuteToHideRow">Minute to hide route</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_user_phone">Phone</string>
    <string name="pref_user_phone_summary">Phone number</string>
    <string name="pref_user_name_summary">Name</string>
    <string name="pref_user_name">Login or username</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_location_summary">Location to find route</string>
    <string name="pref_duration_prefix"> min </string>
    <string name="from_preview">from: </string>
    <string name="preview_after">after </string>
    <string name="preview_to">to: </string>
    <string name="sign_out">Sign out</string>
    <string name="resend_phone_auth">resend</string>
    <string name="verify_phone_auth">verify phone</string>
    <string name="start_phone_auth">auth phone</string>
    <string name="hint_verification_code">verification code</string>
    <string name="hint_phone_number">phone number</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone number</string>

    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <string-array name="pref_location_entries">
        <item>Бутовские Аллеи</item>
        <item>Бунинский</item>
        <item>Бунинские луга</item>
    </string-array>
    <string-array name="pref_location_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
