<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="user_settings"
        android:title="User settings">

        <EditTextPreference
            android:key="user_phone"
            android:summary="@string/pref_user_phone_summary"
            android:title="@string/pref_user_phone" />
        <EditTextPreference
            android:key="user_name"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name" />

    </PreferenceCategory>

    <ru.alexandrkotovfrombutovo.destrictpassengerapp.customview.SeekBarPreference
        android:key="minuteToHideRow"
        android:defaultValue="5"
        android:minLevel = "0"
        android:maxLevel = "60"
        android:summary="@string/minuteToHideRow"
        android:title="Duration" />

    <ListPreference
        android:entries="@array/pref_location_entries"
        android:entryValues="@array/pref_location_values"
        android:key="location"
        android:summary="@string/pref_location_summary"
        android:title="@string/pref_location_title"
        android:defaultValue="0"/>


</PreferenceScreen>