<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="ru.alexandrkotovfrombutovo.destrictpassengerapp.fragments.RouteFragment">


    <EditText
        android:id="@+id/fromRouteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/from" />
    <EditText
        android:id="@+id/toRouteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/durationSpinner"
        />
    <CheckBox
        android:id="@+id/isDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/isDoneStr"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/userTypeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_directions_run"/>

        <TextView
            android:id="@+id/switchLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:text="@string/switchLabelPedestrian"/>

        <Switch
            android:id="@+id/switchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancelButtonStr"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saveButtonStr"
            android:textAlignment="center"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>
